Closed
Bug 1117398
Opened 8 years ago
Closed 8 years ago
Spotify Web Player crashes with Async Init enabled
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(firefox36 unaffected, firefox37 fixed, firefox38 fixed)
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox36 | --- | unaffected |
firefox37 | --- | fixed |
firefox38 | --- | fixed |
People
(Reporter: hroo772, Assigned: bugzilla)
References
()
Details
Crash Data
Attachments
(1 file)
11.53 KB,
patch
|
jimm
:
review+
lmandel
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:37.0) Gecko/20100101 Firefox/37.0 Build ID: 20150103030215 Steps to reproduce: I have e10s enabled and my current build is: Mozilla/5.0 (X11; Linux x86_64; rv:37.0) Gecko/20100101 Firefox/37.0 ID:20150103030215 CSet: 57e4e9c33bef With the new setting of dom.ipc.plugins.asyncInit set to true, going to this page: https://play.spotify.com/browse as an already logged in user causes the browser to crash. Actual results: Here is the crash report from when loading: https://play.spotify.com/browse https://crash-stats.mozilla.com/report/index/7abf9a76-bba4-4bc7-a3d3-54cc02150103 Expected results: The page will load without crashing, with no audio playing.
Reporter | ||
Updated•8 years ago
|
Crash Signature: https://crash-stats.mozilla.com/report/index/7abf9a76-bba4-4bc7-a3d3-54cc02150103
Reporter | ||
Updated•8 years ago
|
Blocks: asyncplugininit
Updated•8 years ago
|
Crash Signature: https://crash-stats.mozilla.com/report/index/7abf9a76-bba4-4bc7-a3d3-54cc02150103 → [@ mozilla::Monitor::Lock() ]
Updated•8 years ago
|
Flags: needinfo?(aklotz)
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → aklotz
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(aklotz)
Reporter | ||
Comment 1•8 years ago
|
||
Still occurring today with e10s enabled: Mozilla/5.0 (X11; Linux x86_64; rv:37.0) Gecko/20100101 Firefox/37.0 ID:20150109030224 CSet: b3f84cf78dc2 But I did notice that with e10s disabled the crash doesn't occur with Async Init enabled, just fyi.
Assignee | ||
Comment 2•8 years ago
|
||
Thanks for the URL, Eric. I'm currently testing a fix. (I must have written that code while I was sick with the flu!)
Assignee | ||
Comment 3•8 years ago
|
||
Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8548432 [details] [diff] [review] Clean up handling of plugin entry points on Linux This patch fixes and reorganizes some stuff in the linux NP_Initialize. I also removed some instances of NS_PLUGIN_INIT_PENDING when it was inappropriate to return that value. NS_PLUGIN_INIT_PENDING is really meant only for NPP_New, not NP_Initialize. I also renamed mAsyncInitPluginFuncs to mNPPIface since it must now be used in some sync init places as well.
Attachment #8548432 -
Flags: review?(jmathies)
![]() |
||
Updated•8 years ago
|
Attachment #8548432 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 5•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/590d6f515541
Comment 6•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/590d6f515541
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Assignee | ||
Comment 7•8 years ago
|
||
Comment on attachment 8548432 [details] [diff] [review] Clean up handling of plugin entry points on Linux Approval Request Comment [Feature/regressing bug #]: asynchronous plugin initialization [User impact if declined]: feature won't be testable with aurora on linux [Describe test coverage new/current, TBPL]: on m-c, plugin tests also pass with asyncInit activated on try [Risks and why]: Low, changes are limited in scope and have been tested under both sync and async configurations [String/UUID change made/needed]: None
Attachment #8548432 -
Flags: approval-mozilla-aurora?
Comment 8•8 years ago
|
||
Comment on attachment 8548432 [details] [diff] [review] Clean up handling of plugin entry points on Linux Approving to get asyncInit testing on Linux on Aurora and to keep our options open wrt shipping this feature. Aurora+
Attachment #8548432 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•8 years ago
|
Comment 10•8 years ago
|
||
Seems to be back https://bugzilla.mozilla.org/show_bug.cgi?id=1128255 https://crash-stats.mozilla.com/report/index/0411598b-fade-47a4-8e2a-0c15b2150219 https://crash-stats.mozilla.com/report/index/92779ab1-0f05-4cf9-b905-7b5e82150212
Assignee | ||
Comment 11•8 years ago
|
||
(In reply to Ryan from comment #10) > Seems to be back > > https://bugzilla.mozilla.org/show_bug.cgi?id=1128255 > > > https://crash-stats.mozilla.com/report/index/0411598b-fade-47a4-8e2a- > 0c15b2150219 > > https://crash-stats.mozilla.com/report/index/92779ab1-0f05-4cf9-b905- > 7b5e82150212 Same signature but a different bug.
Updated•9 months ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•