Bug 1117398 - Ensure NPP entry points are handled properly with async plugin init on linux. r=jimm, a=lmandel